Another dark mode fix.

--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -136,6 +136,10 @@ header {
 strong {
     color:#222;
     font-weight:700;
+
+    @media (prefers-color-scheme: dark) {
+        background-color: #f2ca7e;
+    }
 }
 
 section {
